--- a/src/package.json
+++ b/src/package.json
@@ -51,6 +51,7 @@
     "ms": "^2.0.0",
     "mysql2": "^3.11.3",
     "negotiator": "^0.6.3",
+    "nodemailer": "^6.9.16",
     "object-inspect": "^1.13.2",
     "on-finished": "^2.4.1",
     "parseurl": "^1.3.3",
