--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "express-session": "^1.18.1",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1"
+  },
+  "scripts": {
+    "start": "node src/app.js"
   }
 }
