--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,15 @@ services:
   web:
     build: .
     ports:
-      - "8000:80"
+      - "8000:8000"
     volumes:
-      - .:/usr/share/nginx/html
+      - .:/wargame
+      - /wargame/node_modules
     depends_on:
       - db
 
   db:
-    image: mysql:8.0
+    image: mysql:8.0.40
     environment:
       MYSQL_ROOT_PASSWORD: chlgustjr05@
       MYSQL_DATABASE: wargame
@@ -17,7 +18,7 @@ services:
       - db_data:/var/lib/mysql
       - ./wargame.sql:/docker-entrypoint-initdb.d/wargame.sql
     ports:
-      - "3306:3306"
+      - "3307:3306"
 
 volumes:
   db_data:
