--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,19 @@
 server {
-    listen 80;
+    listen 8000;
 
-    root /usr/share/nginx/html; 
+    root /wargame; 
     
-
-    index index.html index.htm;
-
-    server_name localhost;
-
+    index /public/views/index.ejs
+    
+    server_name wargame;
+    
     location / {
         try_files $uri $uri/ =404;
+        rewrite ^/api(.*)$ $1 break;
+        proxy_pass   http://15.165.127.64:8000;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Real-IP $remote_addr;
     }
 }
+
