FEAT docker 리버스 프록시 적용

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - /wargame/node_modules
     depends_on:
       - db
+    networks:
+      - app-network
 
   db:
     image: mysql:8.0.40
@@ -19,7 +21,25 @@ services:
       - ./wargame.sql:/docker-entrypoint-initdb.d/wargame.sql
     ports:
       - "3307:3306"
+    restart: always
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    ports: 
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - web 
+    networks:
+      - app-network
+    restart: always
 
 volumes:
   db_data:
     driver: local
+
+networks:
+  app-network:
+    driver: bridge
