--- a/nginx.conf
+++ b/nginx.conf
@@ -1,19 +1,21 @@
-server {
-    listen 8000;
+worker_processes auto;
 
-    root /wargame; 
-    
-    index /public/views/index.ejs
-    
-    server_name wargame;
-    
-    location / {
-        try_files $uri $uri/ =404;
-        rewrite ^/api(.*)$ $1 break;
-        proxy_pass   http://15.165.127.64:8000;
-        proxy_set_header Host $http_host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Real-IP $remote_addr;
-    }
+events {
+    worker_connections 1024;
 }
 
+http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
+    server {
+        listen 80;
+
+        location / {
+            proxy_pass http://web:8000;
+            proxy_set_header Host $http_host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+    }
+}
